scripts/nullaway/original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8.txt
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields tokaPaikka (line 15), tokaKohdePaikka (line 16), ekaPaikka (line 17), ekaKohdePaikka (line 18), ekaSitsaaja (line 19), ekaKohdeSitsaaja (line 20), tokaSitsaaja (line 21), tokaKohdeSitsaaja (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Jarjestaja(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:37: error: [NullAway] assigning @Nullable expression to @NonNull field
        ekaKohdePaikka = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:85: error: [NullAway] assigning @Nullable expression to @NonNull field
        tokaPaikka = null;
                   ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:129: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/Paikka.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields sitsaaja (line 10), naisenAvecinPaikka (line 11), puolisonPaikka (line 12), miehenAvecinPaikka (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Paikka(int poyta, int paikka) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/Sitsaaja.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields avec (line 16), puoliso (line 19), paikka (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Sitsaaja(String nimi) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/Hakemisto.java:37: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/Hakemisto.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/Hakemisto.java:118: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/ArrayList.java:77: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/ArrayList.java:94: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/ParhaanLoytaja.java:38: error: [NullAway] initializer method does not guarantee @NonNull fields ajonParhaatPaikat (line 21), ekatPaikatPoydassa (line 27), kohdePaikat (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ParhaanLoytaja(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Optimoija.java:39: error: [NullAway] initializer method does not guarantee @NonNull field vanhatPaikat (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Optimoija(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Pisteyttaja/PaikanPisteet.java:33: error: [NullAway] initializer method does not guarantee @NonNull fields yhteydet (line 14), kohdePaikka (line 15), kohdeSitsaaja (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected PaikanPisteet(Paikka paikka, Laskin laskin) {
              ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Pisteyttaja/PaikanPisteetTest.java:24: error: [NullAway] initializer method does not guarantee @NonNull fields paikka (line 16), pisteet (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public void setUp() {
                ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Pisteyttaja/PisteetTest.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields sitsaaja (line 14), pisteet (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public void setUp() {
                ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/AsetustenTulostaja.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields tiedosto (line 18), sisalto (line 19), bw (line 20), fw (line 21), poytienKoot (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AsetustenTulostaja(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:38: error: [NullAway] initializer method does not guarantee @NonNull fields sitsaaja (line 19), tiedot (line 22), kohdeSitsaaja (line 24) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TiedostonKasittelija(String tiedosto) {
           ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:98: error: [NullAway] passing @Nullable parameter 'br' where @NonNull is required
            poytienMaara(br, cvsSplitBy);
                         ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:99: error: [NullAway] passing @Nullable parameter 'br' where @NonNull is required
            sitsaajat(br, cvsSplitBy);
                      ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:100: error: [NullAway] passing @Nullable parameter 'br' where @NonNull is required
            avecit(br, cvsSplitBy);
                   ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:101: error: [NullAway] passing @Nullable parameter 'br' where @NonNull is required
            puolisot(br, cvsSplitBy);
                     ^
    (see http://t.uber.com/nullaway )
../original/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:102: error: [NullAway] passing @Nullable parameter 'br' where @NonNull is required
            yhteydet(br, cvsSplitBy);
                     ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
23 errors
